syntax = "proto3";

option java_multiple_files = true;
package proto;

message NewInterestProto{
 	 string userId = 1;
     string description = 2;
}

message NewInterestResponseProto{
	 int64 id = 1;
     string description = 2;
     string status = 3;
}

message RemoveInterestProto{
     int64 id = 1;
     string userId = 2;
}

message RemoveInterestResponseProto{
     string status = 1;
}