syntax = "proto3";

option java_multiple_files = true;
package proto;
import "userModel.proto";

service UserGrpcService{
  rpc update (UpdateUserProto) returns (UpdateUserResponseProto);
  rpc find (FindUserProto) returns (FindUserResponseProto);
  rpc getFirstAndLastName (UserNamesProto) returns (UserNamesResponseProto);
  rpc getEmail(EmailProto) returns (EmailResponseProto);
  rpc getId(IdProto) returns (IdResponseProto);
}